added burger logo in svg and png

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </svg>
 
       <ul class="list nav__list collapsible__content">
-        <li class="nav__item"><a href="#">Hosting</a></li>
-        <li class="nav__item"><a href="#">VPS</a></li>
-        <li class="nav__item"><a href="#">Domain</a></li>
-        <li class="nav__item"><a href="#">Pricing</a></li>
+        <li class="nav__item"><a href="#">Order Now</a></li>
+        <li class="nav__item"><a href="#">Menu</a></li>
+        <li class="nav__item"><a href="#">About Us</a></li>
+        <li class="nav__item"><a href="#">Contact Us</a></li>
       </ul>
     </nav>
     <section class="block block--dark block--skewed-left hero">
